Updated French stuff

--- a/Industry/French_Industry_CV.tex
+++ b/Industry/French_Industry_CV.tex
@@ -36,7 +36,7 @@
 
 \makecvtitle % Print the CV title
 
-Doctorat en mathématiques pures à la recherche d'un poste en Data Science. 
+Docteur en mathématiques fondamentales à la recherche d'un poste en Data Science. 
 
 
 %----------------------------------------------------------------------------------------
