Updated gitignore and added SQL familiarity

--- a/Industry/English_Industry_CV.tex
+++ b/Industry/English_Industry_CV.tex
@@ -95,7 +95,7 @@ PhD in mathematics, with research experience in algebraic geometry and algebraic
 	%\item  I use Arch Linux as a daily driver: I am well versed in Bash scripting and Docker containers.
 %\item  I use \texttt{git} version control, both from the terminal and from GitHub web interface.}
 %\end{itemize}}}
-\cvitem{Familiar}{HTML, CSS, JavaScript \Chiaro{(Coded my webpage)}}
+\cvitem{Familiar}{HTML, CSS, JavaScript \Chiaro{(Coded my webpage)}, SQL \Chiaro{(Internship)}}
 \cvitem{}{\texttt{git}, Docker \Chiaro{(Self-hosting on my server)}}
 \cvitem{Proficient}{\texttt{C++} \Chiaro{(CS Olympiads)}, \texttt{Python} \Chiaro{(Internship and university)}, Bash scripting, \LaTeX}
 
