--- a/Industry/French_Industry_CV.tex
+++ b/Industry/French_Industry_CV.tex
@@ -91,7 +91,7 @@ Doctorat en mathématiques, avec une expérience de recherche en géométrie alg
 
 \section{Compétences Techniques}
 
-\cvitem{Familier}{HTML, CSS, JavaScript \Chiaro{(j'ai codé mon site web)}}
+\cvitem{Familier}{HTML, CSS, JavaScript \Chiaro{(j'ai codé mon site web)}, SQL \Chiaro{(Stage)}}
 \cvitem{}{\texttt{git}, Docker \Chiaro{(self-hosting sur mon serveur)}}
 \cvitem{Compétent}{\texttt{C++} \Chiaro{(Olympiades informatique)}, \texttt{Python} \Chiaro{(stage et université)}, Script Bash, \LaTeX}
 
